added launch in one command and README
